--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 'android-N'
-    buildToolsVersion '23.0.2'
+    compileSdkVersion 23
+    buildToolsVersion '24.0.0 rc1'
     defaultConfig {
         applicationId "cn.com.caoyue.tinynote"
         minSdkVersion 15
-        targetSdkVersion 'android-N'
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -18,13 +18,17 @@ android {
     }
     productFlavors {
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.0.0-alpha1'
-    compile 'com.android.support:recyclerview-v7:24.0.0-alpha1'
-    compile 'com.android.support:cardview-v7:24.0.0-alpha1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.jude:utils:1.1.0'
 }
