--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,9 @@ android {
     buildToolsVersion '24.0.0 rc1'
     defaultConfig {
         applicationId "cn.com.caoyue.tinynote"
-        minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.1"
     }
     buildTypes {
         release {
@@ -17,6 +16,12 @@ android {
         }
     }
     productFlavors {
+        dev {
+            minSdkVersion 21
+        }
+        prod {
+            minSdkVersion 14
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
@@ -31,4 +36,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.jude:utils:1.1.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'com.squareup.sqlbrite:sqlbrite:0.6.2'
 }
